# fast_succinct_trie

./: .gitignore  .gitmodules
bench/: .gitignore  CMakeLists.txt  bench.cpp  out.json  out1.json
bench/CoCo-trie-wrapper/: CMakeLists.txt
bench/scripts/: formatter.py  plotter.py  run_bench.py
sample/: sample.cpp
